# chattix

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
chattix/: __init__.py  auth.py  config.py  db.py  dependencies.py  main.py
chattix/models/: __init__.py  message.py  room.py  user.py
chattix/routers/: auth.py  messages.py  presence.py  rooms.py  uploads.py
chattix/schemas/: __init__.py  auth.py  message.py  room.py
chattix/serialization/: __init__.py  codec.py  wire.py
chattix/services/: connection_manager.py  messages.py  redis_bus.py
chattix/websocket/: chat.py
